tests/cases/scc/error/0024-lvale-cast.c
//!necc-dbg @ -as

int
main()
{
	int a;

	(char) a = 1025;

	return (a == 1) ? 0 : 1;
}
